CHANGELOG

September 28th, 2010
  - Added line-item as a special case xml tag
  -

September 7th, 2010
  - Fixed a bug with cancelling recurring application charges. (thanks meeech!)

August 12th, 2010
  - Fixed a typo in Event::get

August 4th, 2010
  - Added a few tests, changed error conditions for getting data from the API
  - Updated get methods for ApplicationCharge and RecurringApplicationCharge

August 2nd, 2010
  - Fixed a bug with removing objects through the API (thanks meeech!)
  - Fixed an issue in recurseXML to properly return errors

July 29th, 2010
  - Fixed a minor typo and a bug in url_encode_params (thanks daniellmb!)

July 26th, 2010
  - Fixed a bug in arrayToXML to fix creating products with variants, images and options (thanks for the report and proposed fix by meeech! (http://github.com/meeech/))
  - Example array to create product with variants
    $fields = array(
        'product-type' => 'Product',
        'body-html' => 'This is some HTML for the Product',
        'title' => 'This is a title',
        'variants' => array(
            array(
                'price' => 10.00,
                'option1' => 'first'
            ),
            array(
              'price' => 11.00,
              'option1' => 'second'
            )
        )
    );

July 14th, 2010
  - Fixed a bug in Blog::remove -- missing $blog_id parameter

July 9th, 2010
  - Fixed some bugs in ApplicationCharge and RecurringApplicationCharge
  - Made some modifications to both ApplicationCharge::get, ApplicationCharge::activate, RecurringApplicationCharge::get, RecurringApplicationCharge::activate
    to make getting charges from the API easier, and the process of activation easier.

July 7th, 2010
  - Added some better error checking with XML results. An array will not be returned with errors if there is any.

June 30th, 2010
  - Added SSL support options
  - Added lib/cacert.pem to verify Shopify SSL certificates
  - Updated README
  
June 29th, 2010