@@ -1,8 +1,10 @@
 CHANGELOG
 
+October 8th, 2010
+  - Fixed organizeArray for assets by adding key as the index if it exists
+
 September 28th, 2010
   - Added line-item as a special case xml tag
-  -
 
 September 7th, 2010
   - Fixed a bug with cancelling recurring application charges. (thanks meeech!)
